modified FindBugs Codes