@@ -53,7 +53,7 @@ public class ProgramFunctionController extends CommonController {
                     jqgrid = new JqGridCrudUtil<>(AdProgramFunctionEntity.class, AdProgramFunctionEntityPK.class, params);
 
             Date date = new Date();
-            Long adminID = new Long(1);
+            Long adminID = Long.valueOf(1);
 
             switch (jqgrid.getOper()) {
                 case ADD:
