@@ -49,7 +49,7 @@ public class RoleController extends CommonController {
             JqGridCrudUtil<AdRoleEntity, AdRoleEntityPK> jqgrid = new JqGridCrudUtil<>(AdRoleEntity.class, AdRoleEntityPK.class, params);
 
             Date date = new Date();
-            Long adminID = new Long(1);
+            Long adminID = Long.valueOf(1);
 
             switch (jqgrid.getOper()) {
                 case ADD:
